--- a/style.css
+++ b/style.css
@@ -1,142 +1,124 @@
 body {
+    font-family: "Lato", sans-serif;
+    transition: background-color .5s;
+  }
+  
+  .sidenav {
+    height: 100%;
+    width: 0;
+    border-radius: 0px 30px 0px 30px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
     font-size: 16px;
-	font-family:serif;
+    color: whitesmoke;
+    display: block;
+    transition: 0.3s;
+  
   }
   
+  .sidenav a:hover {
+      font-size: 20px;
+      font-family:sans-serif;
+    color:  #BC13FE;
+    box-shadow: 10px #edeced;
 
-  
-  .active {
-    background-color:gray;
-	font-style: bold;
+
   }
-.pic{
-width:100%;
-max-width: 100%;
-}
-.banner{
-position:relation;
-height:500px;
-max-width: 100%;
-
-}
-.banner-video{
-position:absolute;
-overflow:hidden;
-z-index=-1;
-max-width: 100%;
-}
-h1{
-text-align:center;
-font-family:timesnewroman;
-color:white;
-background-color:black;
-}
-p{
-font-family:georgia;
-font-size:15px;
-margin-left:5%;
-width:50%;
-}
-ul {
-    
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-  position:fixed;
-  top=0;
-  width=100%;
-  border-radius:100px;
-  max-width: 100%;
-
-}
-ol {
-max-width: 100%;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: slategray;
-  color:white;
-  border-radius: 20px;
-
-}
-.img2{
-  margin-left: 6%;
-border-radius:10%;
-box-shadow:7px 7px slategray;
-max-width: 100%;
-margin-top:1.5%;
-}
-img{
-max-width: 100%;
-}
-.img1{
-margin-right:12%;
-border-radius:50%;
-margin-top:1.5%;
-}
-.img1:hover{
-width:80px;
-height:80px;
-}
-.img3{
-  border-radius: 200px;
-}
-.img4{
-  margin-left: 5%;
-}
-a:hover{
-color:black;
-}
-a:unvisited{
-color:blue;
-}
-.a{
-  background-color: lightblue;
-  color: rgb(22, 22, 22);
-  border-radius: 150px;
   
-}
-.b{
-  text-align: left;
-  align-items: left;
-  align-self: left;
-  align-content: left;
-  width: 70%;
-  height: 550px;
-  margin-left:100px;
-}
-.c{
-  text-align: right;
-  margin-right: 100px;
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  
+  #main {
+    transition: margin-left .5s;
+    padding: 16px;
+  }
+  
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
+  .a{
+      font-family: 'Arial', sans-serif;
+              margin: 0;
+              padding: 0;
+              box-sizing: border-box;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              height: 100vh;
+          
+  }
+  form {
+      background-color: #131111;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow:0 0 10px #BC13FE;
 
-}
-embed{
-  border-radius: 20px;
-  box-shadow:9px 9px 2px 2px slategray;
-  max-width: 100%;
-}
-.d{
-  float:left;
-}
-.d:hover{
-  width:130px;
-  height: 130px;
-}
+  }
+  
+  label {
+      display: block;
+      margin-bottom: 8px;
+  }
+  
+  input {
+      width: 100%;
+      padding: 8px;
+      margin-bottom: 16px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+  }
+  
+  button {
+      background-color: pink;
+      color: black;
+      font-weight:300px;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+  }
+  
+  button:hover {
+      background-color: rgb(181, 12, 197);
+      color: aliceblue;
+  }
+  .container {
+      position: relative;
+      text-align: center;
+      color: white;
+      display: inline-block;
+    }
+    .centered {
+      position:fixed;
+      top: 70%;
+      left:50%;
+      transform: translate(-50%, -50%);
+
+    }
+    .img3{
+      border-radius: 200px;
+    }
+    .b{
+      background-color: black;
+       padding:15px; 
+       font-family:serif;
+
+    }
